<resources>
    <string name="app_name">Frailty Questionnaire</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Questionnaire</string>
    <string name="start">START</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="evaluator">Evaluator</string>
    <string name="subject_id">Subject ID</string>
    <string name="load_previous">LOAD PREVIOUS</string>
    <string name="or">OR</string>
    <string name="error_id">Please enter a Subject ID</string>
    <string name="rnl">RNL - Effort</string>
    <string name="rnlDescription">We would like to know how much effort you need in doing certain activities.  For each of the following questions, please choose the number that corresponds to the effort that you need to do the following activities.</string>
    <string name="rnlTitle">How much effort is it for you to:</string>
    <string name="rnlOption1">Extreme effort</string>
    <string name="rnlOption2">No effort at all</string>
    <string name="rnl1">Meet your self-care needs?</string>
    <string name="rnl2">Move around your living quarters?</string>
    <string name="rnl3">Participate in social activities with family and/or friends?</string>
    <string name="rnl4">Participate in recreational activities? (sports, hobbies, cards, etc.)</string>
    <string name="rnl5">Spend your day doing an activity that is important to you?</string>
    <string name="rnl6">Assume a role in your family?</string>
    <string name="rnl7">Move around your community? (shopping, banking, etc.)</string>
    <string name="rnl8">Take trips out of town?</string>
    <string name="rnl9">Deal with life events when they happen?</string>
    <string name="rnl10">Be comfortable with your personal relationships?</string>
    <string name="rnl11">Be comfortable with yourself when you are in the company of others?</string>
    <string name="rnlRestriction">RNL - Restriction</string>
    <string name="rnlRestrictionTitle">Are you restricted in:</string>
    <string name="rnlRestrictionDescription">We would like to know how restricted you feel in doing certain activities.  For each of the following questions, please choose the number that corresponds to the amount of restriction that you feel in doing the following activities.</string>
    <string name="rnlRestrictionOption1">Completely restricted</string>
    <string name="rnlRestrictionOption2">Not at all restricted</string>
    <string name="rnlRestriction1">Meeting your self-care needs?</string>
    <string name="rnlRestriction2">Moving around your living quarters?</string>
    <string name="rnlRestriction3">Participating in social activities with family and/or friends?</string>
    <string name="rnlRestriction4">Participating in recreational activities? (sports, hobbies, cards, etc.)</string>
    <string name="rnlRestriction5">Spending your day doing an activity that is important to you?</string>
    <string name="rnlRestriction6">Assuming a role in your family?</string>
    <string name="rnlRestriction7">Moving around your community? (shopping, banking, etc.)</string>
    <string name="rnlRestriction8">Taking trips out of town?</string>
    <string name="rnlRestriction9">Dealing with life events when they happen?</string>
    <string name="rnlRestriction10">Feeling comfortable with your personal relationships?</string>
    <string name="rnlRestriction11">Feeling comfortable with yourself when you are in the company of others?</string>
    <string name="barthel">Barthel</string>
    <string name="barthel1">If there was no one to help you with your feeding, could you do it alone?</string>
    <string name="barthel2">If there was no one to help you with your personal hygiene, could you do it alone?</string>
    <string name="barthel3">If there was no one to help you, would you be able to bathe or shower without anyone present?</string>
    <string name="barthel4">If there was no one to help you, would you be able to dress yourself?</string>
    <string name="barthel5">If there was no one to help you, would you be able to get to the toilet on your own?</string>
    <string name="barthel6">Do you have any trouble with bowel incontinence?</string>
    <string name="barthel7">Do you have any trouble with bladder control?</string>
    <string name="barthel8">Can you transfer from bed to chair independently?</string>
    <string name="barthel9">Can you walk 50 yards without help or supervision?</string>
    <string name="barthel10">Can you go up and down stairs independently?</string>
    <string name="barthel11">Do you use a wheelchair?</string>
    <string name="oars">OARS-IADL</string>
    <string name="oars1">Can you use the telphone…</string>
    <string name="oars2">Can you get to places out of walking distance…</string>
    <string name="oars3">Can you go shopping for groceries or clothes (assuming has transportation)…</string>
    <string name="oars4">Can you prepare your own meals…</string>
    <string name="oars5">Can you do your own housework…</string>
    <string name="oars6">Can you take your own medicine…</string>
    <string name="oars7">Can you handle your own money…</string>
    <string name="oars1_2">without help, including looking up numbers and dialing</string>
    <string name="oars1_1">with some help (can answer the phone or dial the operator in an emergency, but needs a special phone or help in getting the number or dialing)</string>
    <string name="oars1_0">or are you completely unable to use the telephone</string>
    <string name="oars2_2">without help (can travel on buses, taxis or drive your own car)</string>
    <string name="oars2_1">with some help (need someone to help you or go with you when travelling</string>
    <string name="oars2_0">or are you unable to travel unless emergency arrangements are made for a specialized vehicle like an ambulance</string>
    <string name="oars3_2">without help (taking care of all shopping needs yourself assuming that you had transportation)</string>
    <string name="oars3_1">with some help (need someone to go with you on all shopping trips)</string>
    <string name="oars3_0">or are you completely unable to do any shopping</string>
    <string name="oars4_2">without help (plan and cook meals yourself)</string>
    <string name="oars4_1">with some help (can prepare some things but unable to cook full meals yourself)</string>
    <string name="oars4_0">or are you completely unable to prepare any meals</string>
    <string name="oars5_2">without help (can scrub floors etc.)</string>
    <string name="oars5_1">with some help (can do light housework but need help with heavy work)</string>
    <string name="oars5_0">or are you completely unable to do any housework</string>
    <string name="oars6_2">without help (in the right doses at the right time)</string>
    <string name="oars6_1">with some help (able to take medicine if someone prepares it for you and/or reminds you to take it)</string>
    <string name="oars6_0">or are you completely unable to take your own medicine</string>
    <string name="oars7_2">without help (write checks, pay bills, etc.)</string>
    <string name="oars7_1">with some help (manage day to day buying but need some help with managing cheque book and paying bills)</string>
    <string name="oars7_0">or are you completely unable to handle your own money</string>
    <string name="gds">GDS-Rasch</string>
    <string name="gds1">Are you basically satisfied with your life?</string>
    <string name="gds2">Do you feel that your life is empty?</string>
    <string name="gds3">Do you often get bored?</string>
    <string name="gds4">Are you in good spirits most of the time?</string>
    <string name="gds5">Do you feel happy most of the time?</string>
    <string name="gds6">Do you often feel helpless?</string>
    <string name="gds7">Do you think it is wonderful to be alive now?</string>
    <string name="gds8">Do you feel that your situation is hopeless?</string>
    <string name="vahs">Visual Analogue Health States</string>
    <string name="vahs1">How would you rate your overall health?</string>
    <string name="vahs2">How well are you sleeping?</string>
    <string name="vahs3">How much distress are you experiencing?</string>
    <string name="vahs4">How much pain are you experiencing?</string>
    <string name="vahs5">How much fatigue are you experiencing?</string>
    <string name="vahs6">How much depression are you experiencing?</string>
    <string name="vahs7">How much anxiety are you experiencing?</string>
    <string name="vahs8">Other symptoms?</string>
    <string name="falls">Falls history</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">NEXT</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="language">Language</string>
    <string name="other">Other</string>
    <string name="education_level">What is the highest grade of education you completed?</string>
    <string name="primary">Primary school</string>
    <string name="highschool">High school</string>
    <string name="cegep">CEGEP / College</string>
    <string name="university">University</string>
    <string name="no_education">No education or only kindergarten</string>
    <string name="living_arrangement">Who do you currently live with?</string>
    <string name="alone">Alone</string>
    <string name="roommate">With room mate(s)</string>
    <string name="spousefamily">With a spouse or partner AND family</string>
    <string name="familynospouse">With family, but not with a spouse or partner</string>
    <string name="children">Do you have any children?</string>
    <string name="over_counter_medication">Please put a check in the box beside any of the following over the counter drugs that you  are currently using, for any reason, on a regular basis at least three times each week.</string>
    <string name="acetaminophen">Acetaminophen (Tylenol)</string>
    <string name="ibuprofen">Ibuprofen (Motrin)</string>
    <string name="asa">ASA (Aspirin)</string>
    <string name="multivitamin">Multivitamin supplement</string>
    <string name="mineral">Mineral supplement</string>
    <string name="VitC">Vitamin C (separate from a multivitamin)</string>
    <string name="VitD">Vitamin D (separate from a multivitamin)</string>
    <string name="VitE">Vitamin E (separate from a multivitamin)</string>
    <string name="calcium">Calcium (separate from a multivitamin)</string>
    <string name="other_drug">Other (e.g. Marijuana)</string>
    <string name="complementary_therapies">Complementary therapies (also called complementary medicine or alternative therapies).  Examples are: herbal therapy, chiropractic therapy, nutrition/diet therapy, homeopathic care, osteopathic care, acupuncture, energy/reiki therapy, hypnosis therapy, and aromatherapy. They do not include physiotherapy or occupational therapy.</string>
    <string name="use_complementary_therapies">Do you regularly use complementary or alternative therapies?</string>
    <string name="specify_complementary_therapies">If yes, please specify any complementary or alternative therapies that you use.</string>
    <string name="prescription_meds">What prescription medications are you currently taking?</string>
</resources>